testing with absolute position for main to resolve top alignment issues

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -33,6 +33,10 @@ header {
   }
 
   figure {
-    width: 30%;
+    width: 50%;
+
+    @media (min-width: 50rem) {
+      width: 30%;
+    }
   }
 }
